align center H1 and url of one the article fixing

--- a/blog/style.css
+++ b/blog/style.css
@@ -27,6 +27,7 @@ article header h1 {
   font-size: 2.8rem;
   color: #3f3d56;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 article header p {
